<resources>
    <string name="app_name">Mask</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="STORE_NAME">이름</string>
    <string name="STORE_DETAIL">정보</string>
    <string name="STORE_STAT">상태</string>
    <string name="STORE_STOCK_AT">입고시간</string>
    <string name="STORE_TYPE">업종</string>
    <string name="STOCK_PLENTY">많음</string>
    <string name="STOCK_SOME">여유</string>
    <string name="STOCK_FEW">적음</string>
    <string name="STOCK_EMPTY">없음</string>
    <string name="STOCK_OUT_OF">판매중지</string>
    <string name="TIME_OLD">오래</string>
    <string name="TIME_MIN">분</string>
    <string name="TIME_HOUR">시간</string>
    <string name="TIME_DAY">일</string>
    <string name="TIME_BEFORE">전</string>
    <string name="TAB_MY_LOCATION">내 위치</string>
    <string name="TAB_MAP">지도</string>
    <string name="TAB_ZEROPAY">제로페이</string>
    <string name="BTN_PREVIOUS">이전</string>
    <string name="BTN_NEXT">다음</string>
    <string name="HINT_ADDRESS">도로명 주소 (시도 구군 도로명)</string>
    <string name="HINT_NAME">상호명 검색 (시도 구군 상호명)</string>
    <string name="CONTRACT_HELP">해당 앱은 정확한 마스크 현황 정보를 제공하기 위해 사용자의 위치 정보를 사용합니다.
        어떠한 경우에도 사용자의 위치 정보를 수집/저장, 타인에게 제공하지 않습니다. 위치 정보 제공에 동의하실경우, 권한 제공을 위해 하단의 권한 허가 버튼을 눌러주세요.</string>
    <string name="ALLOW_LOCATION">권한 허가</string>
    <string name="TOAST_ALLOWED">위치 정보 제공에 동의하셨습니다.</string>
    <string name="TOAST_DISALLOWED">위치 정보 제공에 거부하셨습니다. 기준 위치 주소를 수동으로 입력해주세요.</string>
    <string name="TOAST_NO_LOCATION">위치 정보를 알 수 없습니다. 위치를 수동 설정하시거나, 권한을 확인해주세요.</string>
    <string name="TOAST_WRONG">잘못된 형식입니다. 다시 입력해주세요.</string>
    <string name="TOAST_FOUND">건을 찾았습니다.</string>
    <string name="TOAST_MORE_TWO">두 글자 이상 입력해주세요.</string>
</resources>
