<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="15dp"
    android:gravity="center_vertical"
    android:background="@drawable/frame_round_bg"
    android:foreground="@drawable/frame_round_border"
    android:clickable="true"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/zlist_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/STORE_NAME"
        android:textAppearance="@style/Font.MainList" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <View
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="top"
            android:layout_margin="3dp"
            android:background="@drawable/ic_location" />

        <TextView
            android:id="@+id/zlist_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/STORE_DETAIL"
            android:textAppearance="@style/Font.SubHeader" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <View
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="top"
            android:layout_margin="3dp"
            android:background="@drawable/ic_turned_in" />

        <TextView
            android:id="@+id/zlist_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/STORE_TYPE"
            android:textAppearance="@style/Font.SubHeader" />

    </LinearLayout>

</LinearLayout>
