<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/frame_round_bg"
    android:foreground="@drawable/frame_round_border"
    android:clickable="true"
    android:orientation="horizontal"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:focusable="true">

    <View
        android:id="@+id/list_item_type"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_border"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/STORE_NAME"
            android:textAppearance="@style/Font.MainList" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <View
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="top"
                android:layout_margin="3dp"
                android:background="@drawable/ic_location" />

            <TextView
                android:id="@+id/list_item_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/STORE_DETAIL"
                android:textAppearance="@style/Font.SubHeader" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:text="@string/STORE_STAT"
            android:textAppearance="@style/Font.MainList" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl">

            <TextView
                android:id="@+id/list_item_stock_at"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/STORE_STOCK_AT"
                android:textAppearance="@style/Font.SubHeader" />

            <View
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="top"
                android:layout_margin="3dp"
                android:background="@drawable/ic_add_circle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
